2017-06-04  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Consolidate <wingdi.h> version specific conditionals.

	* include/wingdi.h: Reorganize file content; group manifest constant
	definitions into a single nested collection of conditional blocks, for
	those definitions which are common to both Win9x and WinNT, with one
	block per Windows version evolution, sorting alphabetically within
	each block; do likewise for additional manifest constant definitions
	which are specific to WinNT, and also for data type definitions and
	function prototypes.

2017-06-03  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Tidy, and make <wingdi.h> header effectively self-contained.

	* include/wingdi.h: Tidy layout; assert copyright.
	(windef.h): Include it; this achieves self-containment.
	[_BEGIN_C_DECLS, _END_C_DECLS]: Use them.
	[UNICODE vs. !UNICODE]: Discriminate generic symbol names, using...
	(__AW_ALIAS__): ...this, when defining each of...
	(DEVMODE, PDEVMODE, LPDEVMODE, DOCINFO, LPDOCINFO, LOGCOLORSPACE)
	(LOGFONT, PLOGFONT, LPLOGFONT, EXTLOGFONT, PEXTLOGFONT, LPEXTLOGFONT)
	(LPLOGCOLORSPACE, TEXTMETRIC, PTEXTMETRIC, LPTEXTMETRIC, GCP_RESULTS)
	(PPOLYTEXT, LPPOLYTEXT, NEWTEXTMETRIC, PNEWTEXTMETRIC, LPNEWTEXTMETRIC)
	(LPENUMLOGFONTEX, ENUMLOGFONTEXDV, PENUMLOGFONTEXDV, LPENUMLOGFONTEXDV)
	(OUTLINETEXTMETRIC, POUTLINETEXTMETRIC, LPOUTLINETEXTMETRIC, POLYTEXT)
	(LPGCP_RESULTS, DISPLAY_DEVICE, PDISPLAY_DEVICE, LPDISPLAY_DEVICE)
	(NEWTEXTMETRICEX, ENUMLOGFONT, LPENUMLOGFONT, ENUMLOGFONTEX): ...these.
	(__AW_SUFFIXED__): Similarly, use this when declaring each of...
	(FONTENUMPROC, ICMENUMPROC, AddFontResource, AddFontResourceEx,
	(CopyEnhMetaFile, CopyMetaFile, CreateColorSpace, CreateEnhMetaFile)
	(CreateDC, CreateFont, CreateFontIndirect, CreateIC, CreateMetaFile)
	(CreateScalableFontResource, DeviceCapabilities, EnumFontFamilies)
	(EnumFontFamiliesEx, EnumFonts, EnumICMProfiles, ExtTextOut)